Set Arithmetic Parser